# aoc-rust

./: .gitignore  Cargo.toml  README.md
data/examples/: 01_2.txt
src/: lib.rs
src/helpers/: matrix.rs
src/template/: mod.rs
