[package]
name = "advent_of_code"
version = "0.9.3"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
pico-args = "0.5.0"
regex = "1.10.2"
num = "0.4.1"
itertools = "0.12.0"
enum-iterator = "1.4.1"
pathfinding = "4.6.0"
colored = "2.1.0"
