[package]
name = "advent_of_code"
version = "0.10.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
today = ["chrono"]
test_lib = []
dhat-heap = ["dhat"]

[dependencies]
chrono = { version = "0.4.31", optional = true }
regex = "1.10.2"
num = "0.4.1"
itertools = "0.12.0"
enum-iterator = "1.4.1"
pathfinding = "4.6.0"
colored = "2.1.0"
dhat = { version = "0.3.2", optional = true }
pico-args = "0.5.0"
tinyjson = "2"
